@@ -255,10 +255,6 @@ public class ExchangeService {
         this.enabledStrictAppSiteDoohValidation = enabledStrictAppSiteDoohValidation;
     }
 
-    /**
-     * Runs an auction: delegates request to applicable bidders, gathers responses from them and constructs final
-     * response containing returned bids and additional information in extensions.
-     */
     public Future<AuctionContext> holdAuction(AuctionContext context) {
         return processAuctionRequest(context)
                 .compose(this::invokeResponseHooks)
@@ -341,9 +337,6 @@ public class ExchangeService {
         return prebid != null ? prebid.getTargeting() : null;
     }
 
-    /**
-     * Creates {@link BidRequestCacheInfo} based on {@link BidRequest} model.
-     */
     private static BidRequestCacheInfo bidRequestCacheInfo(BidRequest bidRequest) {
         final ExtRequestTargeting targeting = targeting(bidRequest);
         final ExtRequestPrebid prebid = extRequestPrebid(bidRequest);
@@ -401,9 +394,8 @@ public class ExchangeService {
             final String codePrefix = prebidMultiBid.getTargetBidderCodePrefix();
 
             if (bidder != null && CollectionUtils.isNotEmpty(bidders)) {
-                debugWarnings.add(
-                        "Invalid MultiBid: bidder %s and bidders %s specified. Only bidder %s will be used."
-                                .formatted(bidder, bidders, bidder));
+                debugWarnings.add("Invalid MultiBid: bidder %s and bidders %s specified. Only bidder %s will be used."
+                        .formatted(bidder, bidders, bidder));
                 tryAddBidderWithMultiBid(bidder, maxBids, codePrefix, bidderToMultiBid, debugWarnings);
                 continue;
             }
@@ -844,7 +836,7 @@ public class ExchangeService {
         final OrtbVersion ortbVersion = bidderSupportedOrtbVersion(bidder, bidderAliases);
         // stored bid response supported only for single imp requests
         final String storedBidResponse = impBidderToStoredBidResponse.size() == 1
-                ? impBidderToStoredBidResponse.get(imps.get(0).getId()).get(bidder)
+                ? impBidderToStoredBidResponse.get(imps.getFirst().getId()).get(bidder)
                 : null;
         final BidRequest preparedBidRequest = prepareBidRequest(
                 bidderPrivacyResult,
@@ -957,10 +949,6 @@ public class ExchangeService {
         return createTids;
     }
 
-    /**
-     * For each given imp creates a new imp with extension crafted to contain only "prebid", "context" and
-     * bidder-specific extension.
-     */
     private List<Imp> prepareImps(String bidder,
                                   List<Imp> imps,
                                   BidRequest bidRequest,
@@ -988,22 +976,10 @@ public class ExchangeService {
                 .build();
     }
 
-    /**
-     * @return Bidfloor divided by factor from {@link PriceFloorAdjuster}
-     */
     private BigDecimal resolveBidFloor(Imp imp, String bidder, BidRequest bidRequest, Account account) {
         return priceFloorAdjuster.adjustForImp(imp, bidder, bidRequest, account);
     }
 
-    /**
-     * Creates a new imp extension for particular bidder having:
-     * <ul>
-     * <li>"prebid" field populated with an imp.ext.prebid field value, may be null</li>
-     * <li>"bidder" field populated with an imp.ext.prebid.bidder.{bidder} field value, not null</li>
-     * <li>"context" field populated with an imp.ext.context field value, may be null</li>
-     * <li>"data" field populated with an imp.ext.data field value, may be null</li>
-     * </ul>
-     */
     private ObjectNode prepareImpExt(String bidder,
                                      ObjectNode impExt,
                                      BigDecimal adjustedFloor,
@@ -1044,9 +1020,6 @@ public class ExchangeService {
                 .build());
     }
 
-    /**
-     * Returns {@link ExtImpPrebid} from imp.ext.prebid {@link JsonNode}.
-     */
     private ExtImpPrebid extImpPrebid(JsonNode extImpPrebid) {
         try {
             return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
@@ -1055,10 +1028,6 @@ public class ExchangeService {
         }
     }
 
-    /**
-     * Checks whether to pass the app.ext.data and app.content.data depending on request having a first party data
-     * allowed for given bidder or not. And merge masked app with fpd config.
-     */
     private App prepareApp(App app, ObjectNode fpdApp, boolean useFirstPartyData) {
         final ExtApp appExt = app != null ? app.getExt() : null;
         final Content content = app != null ? app.getContent() : null;
@@ -1080,10 +1049,6 @@ public class ExchangeService {
         return maskedExtApp.isEmpty() ? null : maskedExtApp;
     }
 
-    /**
-     * Checks whether to pass the site.ext.data  and site.content.data depending on request having a first party data
-     * allowed for given bidder or not. And merge masked site with fpd config.
-     */
     private Site prepareSite(Site site, ObjectNode fpdSite, boolean useFirstPartyData) {
         final ExtSite siteExt = site != null ? site.getExt() : null;
         final Content content = site != null ? site.getContent() : null;
@@ -1105,10 +1070,6 @@ public class ExchangeService {
         return maskedExtSite.isEmpty() ? null : maskedExtSite;
     }
 
-    /**
-     * Checks whether to pass the dooh.ext.data and dooh.content.data depending on request having a first party data
-     * allowed for given bidder or not. And merge masked dooh with fpd config.
-     */
     private Dooh prepareDooh(Dooh dooh, ObjectNode fpdDooh, boolean useFirstPartyData) {
         final ExtDooh doohExt = dooh != null ? dooh.getExt() : null;
         final Content content = dooh != null ? dooh.getContent() : null;
@@ -1130,9 +1091,6 @@ public class ExchangeService {
         return updatedContent.isEmpty() ? null : updatedContent;
     }
 
-    /**
-     * Returns {@link Source} with corresponding request.ext.prebid.schains.
-     */
     private Source prepareSource(String bidder, BidRequest bidRequest, boolean transmitTid) {
         final Source receivedSource = bidRequest.getSource();
 
@@ -1150,12 +1108,6 @@ public class ExchangeService {
                 .build();
     }
 
-    /**
-     * Removes all bidders except the given bidder from bidrequest.ext.prebid.bidders to hide list of allowed bidders
-     * from initial request.
-     * <p>
-     * Also masks bidrequest.ext.prebid.schains.
-     */
     private ExtRequest prepareExt(String bidder,
                                   Map<String, JsonNode> bidderToPrebidBidders,
                                   Map<String, MultiBidConfig> bidderToMultiBid,
@@ -1211,19 +1163,12 @@ public class ExchangeService {
                 : null;
     }
 
-    /**
-     * Prepares parameters for specified bidder removing parameters for all other bidders.
-     * Returns null if there are no parameters for specified bidder.
-     */
     private ObjectNode prepareBidderParameters(ExtRequestPrebid prebid, String bidder) {
         final ObjectNode bidderParams = prebid != null ? prebid.getBidderparams() : null;
         final JsonNode params = bidderParams != null ? bidderParams.get(bidder) : null;
         return params != null ? mapper.mapper().createObjectNode().set(bidder, params) : null;
     }
 
-    /**
-     * Updates 'account.*.request', 'request' and 'no_cookie_requests' metrics for each {@link AuctionParticipation} .
-     */
     private AuctionContext updateRequestMetric(AuctionContext context,
                                                UidsCookie uidsCookie,
                                                BidderAliases aliases,
@@ -1465,7 +1410,7 @@ public class ExchangeService {
         final List<String> requestCurrencies = bidRequest.getCur();
         if (requestCurrencies.size() > 1) {
             errors.add(BidderError.badInput("Cur parameter contains more than one currency. %s will be used"
-                    .formatted(requestCurrencies.get(0))));
+                    .formatted(requestCurrencies.getFirst())));
         }
 
         final List<BidderBid> bids = seatBid.getBids();
@@ -1531,7 +1476,7 @@ public class ExchangeService {
 
         final List<BidderBid> updatedBidderBids = new ArrayList<>(bidderBids.size());
         final List<BidderError> errors = new ArrayList<>(seatBid.getErrors());
-        final String adServerCurrency = bidRequest.getCur().get(0);
+        final String adServerCurrency = bidRequest.getCur().getFirst();
 
         for (final BidderBid bidderBid : bidderBids) {
             try {
